<resources>
    <string name="app_name">BunnyWorld</string>
    <string name="click_obj">Click on Object</string>
    <string name="show_script">Show Script</string>
    <string name="copy_shape">Copy Shape</string>
    <string name="cut_shape">Cut Shape</string>
    <string name="paste_shape">Paste Shape</string>
    <string name="change_background">Change Background</string>
    <string name="import_resource">Import Image</string>
    <string name="x_val">X:</string>
    <string name="y_val">Y:</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="movable">Movable</string>
    <string name="hidden">Hidden</string>
    <string name="on">Y</string>
    <string name="off">N</string>
    <string name="play_game">Play Game</string>
    <string name="create_game">Create Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="default_text_message">Enter text here</string>
    <string name="shape">shape</string>
    <string name="text">Text:</string>
    <string name="reset_script">Reset Script</string>
    <string name="deletegames">Delete All Games</string>
    <string name="areyousure">Are you sure?</string>
    <string name="deletegameswarning">This will delete all the games currently in the database. Is that fine?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="properties_panel">Properties panel:</string>
    <string name="resource_panel">Resource panel:</string>
    <string name="font">Font size:</string>
    <string name="choose_shape">Choose shape:</string>
    <string name="on_drop">on drop</string>
    <string name="restart">RESTART</string>
    <string name="error_status">Error Status:</string>
    <string name="check_errors">Check Errors</string>
    <string name="undo_delete_page">Undo Delete Page:</string>
    <string name="undo_shape_changes">Undo Shape Changes:</string>
    <string name="restart_game">Restart Game:</string>
    <string-array name="location_array">
        <item>Show Right</item>
        <item>Show Left</item>
        <item>Hide</item>
    </string-array>
    <string-array name="visibility_array">
        <item>Show</item>
        <item>Hide</item>
    </string-array>
</resources>
