<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameEditor"
    >

    <item
        android:title="@string/properties_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/right_panel_visibility"
        android:title=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="ifRoom"
        />

    <!--<item-->
        <!--android:title="@string/resource_panel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:showAsAction="ifRoom"-->
        <!--/>-->

    <!--<item-->
        <!--android:id="@+id/resource_visibility"-->
        <!--android:title=""-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:actionViewClass="android.widget.Spinner"-->
        <!--app:showAsAction="ifRoom"-->
        <!--/>-->

    <item
        android:id="@+id/edit_page"
        android:title=""
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="ifRoom"
        android:onClick="editPageName"
        />

    <item
        android:id="@+id/save_page"
        android:title=""
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="ifRoom"
        android:onClick="savePage"
        />

    <item
        android:id="@+id/delete_page"
        android:title=""
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        android:onClick="deletePage"
        />

    <item android:id="@+id/copy_shape"
        android:title="@string/copy_shape"
        app:showAsAction="never"/>

    <item android:id="@+id/cut_shape"
        android:title="@string/cut_shape"
        app:showAsAction="never"/>

    <item android:id="@+id/paste_shape"
        android:title="@string/paste_shape"
        app:showAsAction="never"/>

    <item android:id="@+id/change_background"
        android:title="@string/change_background"
        app:showAsAction="never"/>

    <item android:id="@+id/import_resource"
        android:title="@string/import_resource"
        app:showAsAction="never"/>
</menu>