<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bunny"
    android:orientation="vertical"
    android:id="@+id/background"
    android:onClick="change_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/play_game"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/play_game"
                android:onClick="selectPlayGame"
                android:background="@drawable/custom_button"
                android:layout_margin="25dp"
                />

            <Button
                android:id="@+id/create_game"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/create_game"
                android:onClick="createGame"
                android:background="@drawable/custom_button"
                android:layout_margin="25dp"
                />

            <Button
                android:id="@+id/edit_game"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/edit_game"
                android:onClick="selectEditGame"
                android:background="@drawable/custom_button"
                android:layout_margin="25dp"
                />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/deleteAllButton"
        android:onClick="deleteAllGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/deletegames"
        />
</LinearLayout>

